@@ -1,3 +1,5 @@
+  - fix allow empty years, months and days in html_select_date's
+    time-attribute (messju)
   - fix YES and NO should not be booleanized inside triple-quotes in a
     config-file (messju)
   - fix accidently slurped line following a triple-quoted value in a
